argocd/manifests/media-services/cloudcmd/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: cloudcmd
  namespace: media-system
spec:
  selector:
    app: cloudcmd
  ports:
    - port: 80
      targetPort: 8000
